# document_Scanner

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py  schemas.py  services.py
backend/tests/: test_health.py
docs/: architecture.md
